Fix wrapping of topbar elements

--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -44,10 +44,12 @@ calculation of its parent width so content can be centered without sidebar */
   font-size: 12px;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .content .topbar a {
   text-decoration: none;
   margin: 0px 4px;
+  white-space: nowrap
 }
 /* topbar should not show if the window is large enough for a sidebar */
 @media (min-width: 1281px) {
